syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime";

import "google/protobuf/any.proto";

message CorfuMessage {
    Uuid clientID = 1;
    int64 requestID = 2;
    int64 epoch = 3;
    CorfuMessageType type = 4;
    CorfuPriorityLevel priority = 5;

    google.protobuf.Any payload = 6;
}

// Payload Types (supported for now as it is only used by Log Replication):
// - LogReplicationEntry
// - LogReplicationQueryMetadataResponse
// - LogReplicationQueryLeadershipResponse
// - LogReplicationLeadershipLoss

message LogReplicationEntry {
    LogReplicationEntryMetadata metadata = 1;
    bytes data = 2;
}

message LogReplicationMetadataResponse {
    uint64 siteConfigID = 1;
    string version = 2;
    uint64 snapshotStart = 3;
    uint64 snapshotTransferred = 4;
    uint64 snapshotApplied = 5;
    uint64 lastLogEntryTimestamp = 6;
}

message LogReplicationLeadershipLoss {
    string endpoint = 1;
}

message LogReplicationQueryLeadershipResponse {
    int64 epoch = 1;
    bool isLeader = 2;
    string endpoint = 3;
}

message LogReplicationEntryMetadata {
    int64 siteConfigID = 1;
    LogReplicationEntryType type = 2;
    int64 timestamp = 3;
    int64 previousTimestamp = 4;
    Uuid syncRequestId = 5;
    int64 snapshotTimestamp = 6;
    int64 snapshotSyncSeqNum = 7;
}

message Uuid {
    fixed64 msb = 1;
    fixed64 lsb = 2;
}

enum LogReplicationEntryType {
    LOG_ENTRY_MESSAGE = 0;
    SNAPSHOT_MESSAGE = 1;
    SNAPSHOT_START = 2;
    LOG_ENTRY_REPLICATED = 3;
    SNAPSHOT_REPLICATED = 4;
    SNAPSHOT_END = 5;
    SNAPSHOT_TRANSFER_COMPLETE = 6;
}

enum CorfuPriorityLevel {
    NORMAL = 0;
    HIGH = 1;
}

enum CorfuMessageType {
    LOG_REPLICATION_ENTRY = 0;
    LOG_REPLICATION_METADATA_REQUEST = 1;
    LOG_REPLICATION_METADATA_RESPONSE = 2;
    LOG_REPLICATION_QUERY_LEADERSHIP = 3;
    LOG_REPLICATION_QUERY_LEADERSHIP_RESPONSE = 4;
    LOG_REPLICATION_LEADERSHIP_LOSS = 5;
}